--- a/templates/header.html
+++ b/templates/header.html
@@ -1,56 +1,54 @@
-<header>
-    <h1><a class="logo" href="index.html"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
-    <nav>
-        <ul class="main-menu">
-            <li><a href="FAQ.html">FAQ</a></li>
-            <li><a href="contacts.html">Контакти</a></li>
+<h1><a class="logo" ui-sref="home"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
+<nav>
+    <ul class="main-menu">
+        <li><a ui-sref="faq">FAQ</a></li>
+        <li><a ui-sref="contacts">Контакти</a></li>
+    </ul>
+</nav>
+<div class="search">
+    <form action="#" method="post">
+        <input type="submit" value="">
+        <input type="text" name="search_text" class="search-field" placeholder="Geekstarte">
+    </form>
+    <a class="search-link" href="#">Пошук</a>
+</div>
+<ul class="social">
+    <li>
+        <a href="#"><span class="ico-fb"></span></a>
+    </li>
+    <li>
+        <a href="#"><span class="ico-vk"></span></a>
+    </li>
+    <li>
+        <a href="#"><span class="ico-gplus"></span></a>
+    </li>
+    <li>
+        <a href="#"><span class="ico-tw"></span></a>
+    </li>
+</ul>
+<span class="social-title">Увійти через</span>
+<ul class="account-bar">
+    <li>
+        <a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>
+    </li>
+    <li>
+        <a class="profile" href="#">profile</a>
+    </li>
+    <li>
+        <a class="user-msg" href="#">messages</a>
+    </li>
+    <li class="show-dreams">
+        <a class="user-dreams" href="#">user dreams</a>
+        <ul class="user-dreams-list empty-list">
+            <li class="dream-item"><a href="#">Мрія 1</a></li>
+            <li class="dream-item"><a href="#">Мрія 2</a></li>
+            <li class="dream-item"><a href="#">Мрія 3</a></li>
+            <li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>
+            <li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>
         </ul>
-    </nav>
-    <div class="search">
-        <form action="#" method="post">
-            <input type="submit" value="">
-            <input type="text" name="search_text" class="search-field" placeholder="Geekstarte">
-        </form>
-        <a class="search-link" href="#">Пошук</a>
-    </div>
-    <ul class="social">
-        <li>
-            <a href="#"><span class="ico-fb"></span></a>
-        </li>
-        <li>
-            <a href="#"><span class="ico-vk"></span></a>
-        </li>
-        <li>
-            <a href="#"><span class="ico-gplus"></span></a>
-        </li>
-        <li>
-            <a href="#"><span class="ico-tw"></span></a>
-        </li>
-    </ul>
-    <span class="social-title">Увійти через</span>
-    <ul class="account-bar">
-        <li>
-            <a class="user-photo" href="#"><img src="images/user-photo.jpg" alt="User photo"></a>
-        </li>
-        <li>
-            <a class="profile" href="#">profile</a>
-        </li>
-        <li>
-            <a class="user-msg" href="#">messages</a>
-        </li>
-        <li class="show-dreams">
-            <a class="user-dreams" href="#">user dreams</a>
-            <ul class="user-dreams-list empty-list">
-                <li class="dream-item"><a href="#">Мрія 1</a></li>
-                <li class="dream-item"><a href="#">Мрія 2</a></li>
-                <li class="dream-item"><a href="#">Мрія 3</a></li>
-                <li class="close-block"><a href="#" class="close"><span class="ico-cancel"></span></a></li>
-                <li class="no-user-dreams"><p>Ви не додали жодної мрії</p></li>
-            </ul>
-        </li>
-        <li>
-            <a class="logout" href="#">logout</a>
-        </li>
-    </ul>
-    <a class="add-dream" href="#">Додати мрію</a>
-</header>
+    </li>
+    <li>
+        <a class="logout" href="#">logout</a>
+    </li>
+</ul>
+<a class="add-dream" href="#">Додати мрію</a>
