--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -39,6 +39,9 @@
     height: 40px;
     border-bottom: 1px solid #E1E1E1;
 }
+.feedback dd:hover {
+    color: #F2602C;
+}
 .feedback span{
     position: absolute;
     top: 11px;
