--- a/templates/faq.html
+++ b/templates/faq.html
@@ -2,7 +2,7 @@
     <h1 class="faq-page-title">Регламент та поради</h1>
     <aside class="g-aside faq-aside">
         <ul ng-repeat="quest in questions">
-            <li class="active"><a href="" title="">{{quest.title}}</a></li>
+            <li class="active">{{quest.title}}</li>
         </ul>
     </aside>
 
