--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -1,62 +1,23 @@
-<div class="carosel" id="carosel">
+<div class="carosel" id="carosel" ng-init="chosen = 0">
     <ul class="carosel-nav">
-        <li class="active">
+        <li ng-repeat="dream in doneDreams"
+            ng-click="changeChosen(dream)"
+            ng-class="doneDreams[chosen].id === dream.id ? 'active' : ''">
             <h2>
-                <a href="#">Rostrud tionsequat. Met lan et, vullummy num augait incipit </a>
-            </h2>
-        </li>
-        <li>
-            <h2>
-                <a href="#">Celisl ex eratue consequatum zzrit duisit irit lut volore</a>
-            </h2>
-        </li>
-        <li>
-            <h2>
-                <a href="#">Met lan et, vullummy num</a>
-            </h2>
-        </li>
-        <li>
-            <h2>
-                <a href="#">Met lan et, vullummy num</a>
+                <a href="#">{{dream.title}}</a>
             </h2>
         </li>
     </ul>
     <div class="carosel-inner">
         <ul>
             <li class="active">
-                <a href="#"><img src="images/carosel-item2.jpg" alt="carosel item"></a>
+
+                <a href="#">
+                    <img ng-src="{{doneDreams[chosen].url}}" alt="carosel item">
+                </a>
 
                 <p class="dream-info">
-                    Rostrud tionsequat. Met lan et, vullummy num augait incipit vullamet praestrud dunt lore conse con
-                    henibh ex ectem alit velisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci
-                    ea. feui eugait aut lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del
-                    ulputetue modit nisi.
-                </p>
-            </li>
-            <li>
-                <a href="#"><img src="images/carosel-item2.jpg" alt="carosel item"></a>
-
-                <p class="dream-info">
-                    Celisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea feui eugait aut
-                    lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
-                </p>
-            </li>
-            <li>
-                <a href="#"><img src="images/carosel-item1.jpg" alt="carosel item"></a>
-
-                <p class="dream-info">
-                    Met lan et, vullummy numaugait incipit vullamet praestrud dunt lore conse con henibh ex ectem alit
-                    velisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea feui eugait aut
-                    lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
-                </p>
-            </li>
-            <li>
-                <a href="#"><img src="images/carosel-item2.jpg" alt="carosel item"></a>
-
-                <p class="dream-info">
-                    Met lan et, vullummy numaugait incipit vullamet praestrud dunt lore conse con henibh ex ectem alit
-                    velisl ex eratue consequatum zzrit duisit irit lut volore ecte exerci te faci ea feui eugait aut
-                    lore dolendigna feugiamet ea autpatuero odo dolorem iliquam, velesed del ulputetue modit nisi.
+                    {{doneDreams[chosen].completed_description}}
                 </p>
             </li>
         </ul>
