Editing code in template

--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -11,11 +11,9 @@
     <div class="carosel-inner">
         <div class="carosel-wrapper">
             <div class="active">
-
                 <a href="#">
-                    <img ng-src="{{doneDreams[chosen].url}}" alt="carousel item">
+                    <img ng-src="{{doneDreams[chosen].url}}" alt="Carousel Picture">
                 </a>
-
                 <p class="dream-info">
                     {{doneDreams[chosen].completed_description}}
                 </p>
