Editing bug with position of author photo

--- a/styles/main.css
+++ b/styles/main.css
@@ -707,6 +707,7 @@ ul.main-menu li:last-child {
     width: 100%;
 }
 .dreams-preview .owner img {
+    float: left;
     margin-top: 12px;
 }
 .dreams-preview .owner p {
