--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -11,7 +11,8 @@
     </ul>
     <div class="carosel-inner">
         <ul class="carosel-wrapper">
-            <li class="active"
+            <li class="animate-carousel active"
+                ng-animate
                 ng-repeat="dream in doneDreams"
                 ng-show="doneDreams[chosen].id === dream.id">
 
