--- a/styles/main.css
+++ b/styles/main.css
@@ -658,8 +658,8 @@ ul.main-menu li:last-child {
     background: rgba(0,0,0,.25);
 }
 .animate-carousel {
-    -webkit-transition: all linear 1s;
-    transition: all linear 1s;
+    -webkit-transition: all linear 0.5s;
+    transition: all linear 0.5s;
 }
 .animate-carousel.ng-hide {
     margin-left: 500px;
@@ -667,7 +667,7 @@ ul.main-menu li:last-child {
 .animate-carousel.ng-hide-add,
 .animate-carousel.ng-hide-remove,
 .animate-carousel.ng-hide-remove.ng-hide-remove-active {
-    margin-left: 0px;
+    margin-left: 0;
 }
 .animate-carousel.ng-hide-add.ng-hide-add-active {
     margin-left: -500px;
