--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 <header>
-    <h1><a class="logo" ui-sref="home"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
+    <h1><a class="logo" ui-sref="home" ng-click="title = 'Черкаська мрія - Головна'"><img src="images/logo.png" alt="Черкаська мрія">Черкаська мрія</a></h1>
     <nav>
         <ul class="main-menu">
-            <li><a ui-sref="faq">FAQ</a></li>
-            <li><a ui-sref="contacts">Контакти</a></li>
+            <li><a ui-sref="faq" ng-click="title = 'Черкаська мрія - Регламент і поради'">FAQ</a></li>
+            <li><a ui-sref="contacts" ng-click="title = 'Черкаська мрія - Контакти'">Контакти</a></li>
         </ul>
     </nav>
     <div class="search">
