Adding styles for svg

--- a/styles/main.css
+++ b/styles/main.css
@@ -737,8 +737,8 @@ ul.main-menu li:last-child {
     width: 100%;
 }
 .dreams-preview .owner img {
-    float: left;
     margin-top: 12px;
+    float: left;
 }
 .dreams-preview .owner p {
     position: absolute;
@@ -767,6 +767,7 @@ ul.main-menu li:last-child {
 .dreams-preview .dreams-rank span.supported,
 .dreams-preview .dreams-rank span.rating {
     padding-top: 10px;
+    font-size: 12px;
     color: #fff;
 }
 .dreams-preview .dreams-rank span.rating span,
@@ -781,6 +782,70 @@ ul.main-menu li:last-child {
 .dreams-preview .dreams-rank span.rating {
     float: right;
     margin-right: 10px;
+}
+.work-progress {
+    height: 60px;
+    margin: 15px;
+    text-align: center;
+}
+.svg circle {
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset 1s linear;
+    stroke: #e0e0e0;
+    stroke-width: 7px;
+}
+.svg .bar {
+    stroke: #5a5a5a;
+    transform: rotate(-90deg) translateX(-60px);
+}
+.work-progress .finance,
+.work-progress .instruments,
+.work-progress .people {
+    position: relative;
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+}
+.work-progress .finance:hover .bar,
+.work-progress .instruments:hover .bar,
+.work-progress .people:hover .bar {
+    stroke: #f2602c;
+}
+.work-progress .finance:after,
+.work-progress .instruments:after,
+.work-progress .people:after {
+    position: absolute;
+    display: block;
+    height: 48px;
+    width: 48px;
+    left: 50%;
+    top: 50%;
+    content: "";
+    margin-top: -17px;
+    margin-left: -24px;
+    border-radius: 100%;
+    overflow: hidden;
+    line-height: 48px;
+    font-size: 14px;
+    opacity: .7;
+}
+.work-progress .finance:after {
+    content: url(../images/finance.png);
+}
+.work-progress .instruments:after {
+    content: url(../images/tools.png);
+}
+.work-progress .people:after {
+    content: url(../images/works.png);
+}
+.work-progress .finance:hover:after,
+.work-progress .instruments:hover:after,
+.work-progress .people:hover:after {
+    margin-top: -24px;
+    content: attr(data-pct)"%";
+    color: #444444;
+    opacity: 1;
 }
 .dreams-preview a.btn-support {
     position: relative;
