--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,4 +1,4 @@
-<div class="bg-pages faq-page" ng-init="current = position()">
+<div class="bg-pages faq-page" ng-init="current = position()" dw-loading="faqs" dw-loading-options="{text: 'Loading faqs...'}">
     <h1 class="faq-page-title">Регламент та поради</h1>
     <aside class="g-aside faq-aside">
         <ul>
