corrected loading dreams from the server on the home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <div dw-loading="dreams" dw-loading-options="{text: 'Loading dreams...'}">
     <section class="main-content">
         <ul class="dreams-preview">
-            <li ng-repeat="dream in dreams">
+            <li ng-repeat="dream in dreams()">
                 <span class="favorite"></span>
 
                 <h3>
