--- a/styles/main.css
+++ b/styles/main.css
@@ -671,6 +671,7 @@ ul.main-menu li:last-child {
 }
 .main-content {
     text-align: center;
+    min-height: 400px;
 }
 .dreams-preview:after {
     content: "";
@@ -995,6 +996,6 @@ footer .social li span {
 .popup-thanks .popup-content {
     background: #fff url(../images/popup-thanks.png) no-repeat center 70px;
 }
-.loader {
+.dw-loading.dw-loading-overlay {
     background-color: rgba(0, 0, 0, .5);
 }
