--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <ui-carousel></ui-carousel>
-<div dw-loading="dreams" dw-loading-options="{text: 'Loading dreams...'}">
+<div dw-loading="dreams"">
     <section class="main-content">
         <ul class="dreams-preview">
             <li ng-repeat="dream in dreams()">
