Creating dream-page

--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
                         </svg>
                     </div>
                 </div>
-                <a class="btn-support" href="#">Підтримати</a>
+                <a class="btn-support" ui-sref="dream">Підтримати</a>
             </li>
         </ul>
     </section>
