--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,12 @@
 <ui-carousel></ui-carousel>
-<div dw-loading="dreams"">
+<div dw-loading="dreams">
     <section class="main-content">
         <ul class="dreams-preview">
             <li ng-repeat="dream in dreams()">
                 <span class="favorite"></span>
 
                 <h3>
-                    <a href="#">{{dream.title}}</a>
+                    <a ui-sref="dream">{{dream.title}}</a>
                 </h3>
 
                 <div class="dreams-preview-container">
@@ -16,7 +16,7 @@
                         <p><a href="#">Інна Кулік</a></p><!-- ng-src="{{dream.author}}"-->
                     </div>
                     <span class="triangle"></span>
-                    <a href="#">
+                    <a ui-sref="dream">
                         <img class="img-thumbnail" src="images/img.png" alt="Dream preview image"><!-- ng-src="{{dream.picture}}"-->
                     </a>
 
